--- a/public/projects/lullabylane_tc/index.html
+++ b/public/projects/lullabylane_tc/index.html
@@ -230,6 +230,29 @@
 <p><strong>Entre em Contato</strong></p>
 <p>Se você tiver alguma dúvida ou sugestão sobre meus Termos e Condições, não hesite em entrar em contato comigo em <a href="mailto:utkuyegen@gmail.com">utkuyegen@gmail.com</a>.</p>
 <p>Esta página de Termos e Condições foi gerada por <a href="https://app-privacy-policy-generator.nisrulz.com/">App Privacy Policy Generator</a></p>
+<h1 id="中文">中文</h1>
+<p><strong>条款和条件</strong></p>
+<p>通过下载或使用此应用程序，这些条款将自动适用于您——因此您应确保在使用该应用程序之前仔细阅读这些条款。您不得以任何方式复制或修改应用程序、应用程序的任何部分或我们的商标。您不得尝试提取应用程序的源代码，也不应尝试将应用程序翻译成其他语言或制作衍生版本。该应用程序及与其相关的所有商标、版权、数据库权利和其他知识产权仍归Utku Yeğen所有。</p>
+<p>Utku Yeğen致力于确保应用程序尽可能有用和高效。因此，我们保留在任何时候和出于任何原因对应用程序进行更改或收取服务费用的权利。我们绝不会在不清楚您所支付内容的情况下向您收费。</p>
+<p>摇篮小路应用程序存储并处理您提供的个人数据，以提供我的服务。您有责任确保您的手机和访问应用程序的安全。因此，我们建议您不要越狱或ROOT您的手机，这是一种移除您设备官方操作系统施加的软件限制和限制的过程。这样可能会使您的手机容易受到恶意软件/病毒/恶意程序的攻击，危及您手机的安全功能，并可能导致摇篮小路应用程序无法正常或完全工作。</p>
+<p>该应用程序确实使用声明其条款和条件的第三方服务。</p>
+<p>应用程序使用的第三方服务提供商的条款和条件链接</p>
+<ul>
+<li><a href="https://www.google.com/analytics/terms/">Google Analytics for Firebase</a></li>
+<li><a href="https://firebase.google.com/terms/crashlytics">Firebase Crashlytics</a></li>
+<li><a href="https://www.revenuecat.com/terms">RevenueCat</a></li>
+</ul>
+<p>您应注意Utku Yeğen不会对某些事情承担责任。应用程序的某些功能将需要应用程序具有活动的互联网连接。该连接可以是Wi-Fi或由您的移动网络提供商提供，但如果您没有访问Wi-Fi，并且没有任何数据配额，Utku Yeğen无法对应用程序无法完全功能负责。</p>
+<p>如果您在没有Wi-Fi的区域使用应用程序，请记住，您与移动网络提供商的协议条款仍然适用。因此，在访问应用程序期间，您的移动提供商可能会收取数据费用，或其他第三方费用。在使用应用程序时，您接受对任何此类费用的责任，包括如果您在没有关闭数据漫游的情况下在您所在地区（即地区或国家）以外使用应用程序时的漫游数据费用。如果您不是使用该应用程序的设备的账单付款人，请注意，我们假设您已获得账单付款人的使用权限。</p>
+<p>同样，Utku Yeğen无法对您使用应用程序的方式承担责任，即您需要确保您的设备保持充电——如果电池耗尽而无法开启以享受服务，Utku Yeğen无法承担责任。</p>
+<p>关于Utku Yeğen对您使用该应用程序的责任，当您使用该应用程序时，重要的是要记住，尽管我们努力确保应用程序始终更新和正确，但我们依赖第三方向我们提供信息，以便我们可以将其提供给您。Utku Yeğen对因完全依赖该应用程序功能而造成的任何直接或间接损失不承担责任。</p>
+<p>在某些时候，我们可能希望更新该应用程序。该应用程序目前在iOS上可用——系统的要求（以及我们决定扩展应用程序可用性的任何其他系统）可能会变化，如果您希望继续使用该应用程序，您需要下载更新。Utku Yeğen不承诺将始终更新该应用程序，以便它与您相关和/或与您设备上安装的iOS版本兼容。然而，您承诺在提供更新时始终接受应用程序的更新。我们也可能希望停止提供该应用程序，并可能在任何时候终止其使用，而无需提前通知您终止。如果我们没有告诉您其他内容，任何终止后，(a) 在这些条款中授予您的权利和许可证将结束；(b) 您必须停止使用该应用程序，并且（如有必要）从您的设备中删除它。</p>
+<p><strong>对本条款和条件的更改</strong></p>
+<p>我可能会不时更新我们的条款和条件。因此，建议您定期查看此页面以获取任何更改。我会通过在此页面上发布新的条款和条件来通知您任何更改。</p>
+<p>这些条款和条件自2024-03-01生效。</p>
+<p><strong>联系我们</strong></p>
+<p>如果您对我的条款和条件有任何疑问或建议，请随时通过utkuyegen@gmail.com与我联系。</p>
+<p>本条款和条件页面由<a href="https://app-privacy-policy-generator.nisrulz.com/">应用隐私政策生成器</a>生成</p>
 
     </div>
 </div>
