--- a/public/projects/lullabylane_pp/index.html
+++ b/public/projects/lullabylane_pp/index.html
@@ -302,6 +302,47 @@
 <p><strong>Entre em Contato</strong></p>
 <p>Se você tiver alguma dúvida ou sugestão sobre minha Política de Privacidade, não hesite em entrar em contato comigo em <a href="mailto:utkuyegen@gmail.com">utkuyegen@gmail.com</a>.</p>
 <p>Esta página de política de privacidade foi criada em <a href="https://privacypolicytemplate.net">privacypolicytemplate.net</a> e modificada/gerada por <a href="https://app-privacy-policy-generator.nisrulz.com/">App Privacy Policy Generator</a></p>
+<h1 id="中文">中文</h1>
+<p><strong>隐私政策</strong></p>
+<p>Utku Yeğen作为一款商业应用程序开发了摇篮小路应用程序。该服务由Utku Yeğen提供，旨在按原样使用。</p>
+<p>本页面用于向访问者告知我有关个人信息的收集、使用和披露的政策，如果有人决定使用我的服务。</p>
+<p>如果您选择使用我的服务，则表示您同意根据本政策收集和使用信息。我收集的个人信息用于提供和改进服务。除非本隐私政策中有说明，否则我不会使用或与任何人共享您的信息。</p>
+<p>本隐私政策中使用的术语与我们的条款和条件中使用的术语具有相同的含义，后者可在摇篮小路中访问，除非本隐私政策中另有定义。</p>
+<p><strong>信息收集与使用</strong></p>
+<p>为了提供更好的体验，在使用我们的服务时，我可能会要求您提供某些可识别个人身份的信息。我请求的信息将保留在您的设备上，且我不会以任何方式收集该信息。</p>
+<p>该应用程序确实使用可能会收集用于识别您的信息的第三方服务。</p>
+<p>应用程序使用的第三方服务提供商的隐私政策链接</p>
+<ul>
+<li><a href="https://firebase.google.com/support/privacy">Google Analytics for Firebase</a></li>
+<li><a href="https://firebase.google.com/support/privacy/">Firebase Crashlytics</a></li>
+<li><a href="https://www.revenuecat.com/privacy">RevenueCat</a></li>
+</ul>
+<p><strong>日志数据</strong></p>
+<p>我想告知您，每当您使用我的服务时，如果应用程序出现错误，我会收集称为日志数据的数据和信息（通过第三方产品）在您的手机上。该日志数据可能包括您的设备互联网协议（“IP”）地址、设备名称、操作系统版本、在使用我的服务时应用程序的配置、您使用服务的时间和日期以及其他统计信息。</p>
+<p><strong>Cookies</strong></p>
+<p>Cookies是带有少量数据的文件，通常用作匿名唯一标识符。这些文件会从您访问的网站发送到您的浏览器，并存储在您设备的内部存储中。</p>
+<p>该服务并未明确使用这些“cookies”。然而，该应用程序可能会使用第三方代码和库，这些代码和库使用“cookies”来收集信息并改进其服务。您可以选择接受或拒绝这些cookies，并知道何时将cookie发送到您的设备。如果您选择拒绝我们的cookies，您可能无法使用此服务的某些部分。</p>
+<p><strong>服务提供商</strong></p>
+<p>由于以下原因，我可能会聘请第三方公司和个人：</p>
+<ul>
+<li>促进我们的服务；</li>
+<li>代表我们提供服务；</li>
+<li>执行与服务相关的服务；或</li>
+<li>帮助我们分析我们的服务如何使用。</li>
+</ul>
+<p>我想告知该服务的用户，这些第三方可以访问他们的个人信息。原因是为代表我们执行分配给他们的任务。然而，他们有义务不披露或将信息用于任何其他目的。</p>
+<p><strong>安全性</strong></p>
+<p>我非常重视您信任我们提供您的个人信息，因此我们努力使用商业上可接受的手段来保护它。但请记住，没有任何通过互联网传输的方法或电子存储的方法是100%安全和可靠的，我无法保证其绝对安全性。</p>
+<p><strong>链接到其他网站</strong></p>
+<p>该服务可能包含指向其他网站的链接。如果您点击第三方链接，您将被引导到该网站。请注意，这些外部网站并不是由我运营的。因此，我强烈建议您查看这些网站的隐私政策。我对任何第三方网站或服务的内容、隐私政策或实践不控制且不承担责任。</p>
+<p><strong>儿童隐私</strong></p>
+<p>这些服务不针对13岁以下的任何人。我不会故意收集13岁以下儿童的可识别个人身份的信息。如果我发现有13岁以下的儿童向我提供了个人信息，我会立即从我们的服务器中删除该信息。如果您是家长或监护人并且知道您的孩子向我们提供了个人信息，请与我联系，以便我能够采取必要的措施。</p>
+<p><strong>对本隐私政策的更改</strong></p>
+<p>我可能会不时更新我们的隐私政策。因此，建议您定期查看此页面以获取任何更改。我会通过在此页面上发布新的隐私政策来通知您任何更改。</p>
+<p>本政策自2024-03-01生效。</p>
+<p><strong>联系我们</strong></p>
+<p>如果您对我的隐私政策有任何问题或建议，请随时通过utkuyegen@gmail.com与我联系。</p>
+<p>本隐私政策页面创建于<a href="https://privacypolicytemplate.net">privacypolicytemplate.net</a>，并由<a href="https://app-privacy-policy-generator.nisrulz.com/">应用隐私政策生成器</a>修改/生成。</p>
 
     </div>
 </div>
